k8s/app_python/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: python-ingress
  rules:
    - host: python.app
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: python-service
              port:
                number: 8080
